codegen/tests/attribute_auto_provide/fail/generics.stderr
error: custom attribute panicked
 --> tests/attribute_auto_provide/fail/generics.rs:8:1
  |
8 | #[auto_provide]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: Only concrete types can be registered. Use auto_register! instead
